--- a/components/atoms/cell/cell.module.css
+++ b/components/atoms/cell/cell.module.css
@@ -1,4 +1,18 @@
-.cell {
+.living_cell {
+    transition: 0.5s;
+    border-radius: 1000px;
+    padding: 5px 10px;
+    box-shadow: 0px 0px 24px rgba(0, 0, 0, 0.1);
+    background-color: #000000;
+    color: #FFFFFF;
+    border: 0px;
+    font-size: 20px;
+    height: 50px;
+    width: 50px;
+    position: 'absolute',
+}
+
+.dead_cell {
     transition: 0.5s;
     border-radius: 1000px;
     padding: 5px 10px;
@@ -14,9 +28,14 @@
 
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
-    .cell:hover {
+    .dead_cell:hover {
         cursor: pointer;
         background-color: #000000;
         color: #FFFFFF;
+    }
+    .living_cell:hover {
+        cursor: pointer;
+        background-color: #FFFFFF;
+        color: #000000;
     }
 }
