--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,6 @@
 :root {
   /* --max-width: 1100px; */
-  --border-radius: 12px;
+  /* --border-radius: 12px; */
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
     'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
     'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
@@ -79,7 +79,7 @@
   margin: 0;
 } */
 
-html,
+/* html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
@@ -93,7 +93,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-}
+} */
 
 a {
   color: inherit;
