--- a/components/atoms/cell/cell.module.css
+++ b/components/atoms/cell/cell.module.css
@@ -1,4 +1,4 @@
-.living_cell {
+.living {
     transition: 0.5s;
     border-radius: 1000px;
     box-shadow: 0px 0px 24px rgba(0, 0, 0, 0.1);
@@ -8,10 +8,10 @@
     font-size: 20px;
     height: 50px;
     width: 50px;
-    position: 'absolute',
+    position: absolute;
 }
 
-.dead_cell {
+.dead {
     transition: 0.5s;
     border-radius: 1000px;
     box-shadow: 0px 0px 24px rgba(0, 0, 0, 0.1);
@@ -21,17 +21,17 @@
     font-size: 20px;
     height: 50px;
     width: 50px;
-    position: 'absolute',
+    position: absolute;
 }
 
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
-    .dead_cell:hover {
+    .dead:hover {
         cursor: pointer;
         background-color: #000000;
         color: #FFFFFF;
     }
-    .living_cell:hover {
+    .living:hover {
         cursor: pointer;
         background-color: #FFFFFF;
         color: #000000;
