--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,20 +1,17 @@
 .layout {
-  height: 93vh;
+  height: 97vh;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 20px;
-  gap: 20px;
-}
-
-/* Mobile */
-@media (max-width: 700px) {
-
+  gap: 10px;
 }
 
 /* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-
+@media (min-width: 701px) {
+  .layout {
+    flex-direction: row;
+  }
 }
 
 @media (prefers-color-scheme: dark) {
