--- a/components/atoms/button/button.module.css
+++ b/components/atoms/button/button.module.css
@@ -2,7 +2,7 @@
     transition: 0.5s;
     border-radius: 12px;
     padding: 5px 10px;
-    box-shadow: 0px 0px 24px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 24px rgba(0, 0, 0, 0.2);
     background-color: #FFFFFF;
     color: #000000;
     border: 0px;
@@ -17,3 +17,9 @@
         color: #FFFFFF;
     }
 }
+
+@media (prefers-color-scheme: dark) {
+    .button {
+        box-shadow: 0px 0px 24px rgba(255, 255, 255, 0.3);
+    }
+  }
