--- a/components/molecules/panel/panel.module.css
+++ b/components/molecules/panel/panel.module.css
@@ -1,12 +1,15 @@
 .panel {
     display: flex; 
+    flex-direction: column;
     align-items: center; 
-    justify-content: center;
+    justify-content: space-evenly;
+    gap: 10px;
 }
 
 /* Tablet and Smaller Desktop */
 @media (min-width: 701px) {
     .panel {
+        height: 100%;
         min-width: 20vw;
     }
   }
