--- a/components/atoms/input/input.module.css
+++ b/components/atoms/input/input.module.css
@@ -23,4 +23,8 @@
     .title {
         color: #FFFFFF;
     }
+
+    .input {
+        box-shadow: 0px 0px 24px rgba(255, 255, 255, 0.5);
+    }
 }
