--- a/components/molecules/grid/grid.module.css
+++ b/components/molecules/grid/grid.module.css
@@ -5,9 +5,16 @@
     align-items: center;
     justify-content: center;
     overflow: hidden;
-    border-radius: 20px;
+    border-radius: 24px;
+    box-shadow: 0px 0px 24px rgba(0, 0, 0, 0.2);
 }
 
 .layout {
     position: relative;
+}
+
+@media (prefers-color-scheme: dark) {
+    .grid {
+        box-shadow: 0px 0px 24px rgba(255, 255, 255, 0.3);
+    }
 }
