--- a/components/molecules/panel/panel.module.css
+++ b/components/molecules/panel/panel.module.css
@@ -4,6 +4,7 @@
     align-items: center; 
     justify-content: space-evenly;
     gap: 10px;
+    padding: 10px;
 }
 
 /* Tablet and Smaller Desktop */
