--- a/components/atoms/input/input.module.css
+++ b/components/atoms/input/input.module.css
@@ -10,6 +10,7 @@
 }
 
 .input {
+    min-width: 28px;
     border-radius: 12px;
     padding: 5px 10px;
     box-shadow: 0px 0px 24px rgba(0, 0, 0, 0.2);
