--- a/components/organisms/panel/panel.module.css
+++ b/components/organisms/panel/panel.module.css
@@ -1,16 +1,24 @@
-.panel {
-    display: flex; 
+.layout {
+    display: flex;
     flex-direction: column;
     align-items: center; 
-    justify-content: space-evenly;
+    justify-content: center;
     padding: 10px;
     gap: 10px;
 }
 
-/* Tablet and Smaller Desktop */
+.panel {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: center;
+    gap: 10px;
+}
+
+/* Tablet and Desktop */
 @media (min-width: 701px) {
-    .panel {
+    .layout, .panel {
         height: 100%;
-        min-width: 25vw;
+        justify-content: space-evenly;
     }
 }
