--- a/components/organisms/panel/panel.module.css
+++ b/components/organisms/panel/panel.module.css
@@ -12,7 +12,14 @@
     flex-direction: column;
     align-items: flex-end;
     justify-content: center;
-    gap: 10px;
+    gap: 20px;
+}
+
+.buttons {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 /* Tablet and Desktop */
