--- a/components/organisms/panel/panel.module.css
+++ b/components/organisms/panel/panel.module.css
@@ -1,17 +1,9 @@
-.layout {
-    display: flex;
-    flex-direction: column;
-    align-items: center; 
-    justify-content: center;
-    padding: 10px;
-    gap: 10px;
-}
-
 .panel {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
     justify-content: center;
+    padding: 10px;
     gap: 20px;
 }
 
@@ -24,7 +16,7 @@
 
 /* Tablet and Desktop */
 @media (min-width: 701px) {
-    .layout, .panel {
+    .panel {
         height: 100%;
         justify-content: space-evenly;
     }
