--- a/components/atoms/Tile/tile.module.css
+++ b/components/atoms/Tile/tile.module.css
@@ -27,3 +27,15 @@
         background-color: darkgrey;
     }
 }
+
+@media (prefers-color-scheme: dark) {
+    .alive {
+        background-color: #FFFFFF;
+        box-shadow: inset 2px 2px 3px 1px rgba(0, 0, 0, 0.1);
+    }    
+    .dead {
+        background-color: #000000;
+        box-shadow: inset 2px 2px 3px 1px rgba(255, 255, 255, 0.3);
+    }
+  }
+  
