--- a/components/atoms/button/button.module.css
+++ b/components/atoms/button/button.module.css
@@ -18,6 +18,7 @@
     }
     .button:disabled {
         cursor: not-allowed;
+        opacity: 80%;
         background-color: #FFFFFF;
         color: #000000;    
     }
