--- a/components/atoms/Tooltip/tooltip.module.css
+++ b/components/atoms/Tooltip/tooltip.module.css
@@ -14,8 +14,6 @@
     text-align: center;
     padding: 5px 0;
     border-radius: 6px;
-
-    /* Position the tooltip text - see examples below! */
     position: absolute;
     z-index: 1;
 }
@@ -24,3 +22,5 @@
 .tooltip:hover .tooltiptext {
     visibility: visible;
 }
+
+/* TODO: positioning and arrows */
