--- a/components/atoms/Label/label.module.css
+++ b/components/atoms/Label/label.module.css
@@ -4,20 +4,20 @@
     gap: 6px;
 }
 
-.title {
+.label {
     color: #000000;
     font-size: 20px;
 }
 
 /* Tablet and Desktop */
 @media (min-width: 701px) {
-    .title {
+    .label {
         white-space: nowrap;
     }
 }
 
 @media (prefers-color-scheme: dark) {
-    .title {
+    .label {
         color: #FFFFFF;
     }
 }
